{{$NEXT}}

- When looking up a private IP address in GeoIP2::Database::Reader, a
  GeoIP2::Error::Generic exception is now thrown by that class rather than
  relying on MaxMind::DB::Reader to throw an exception.
- The city_isp_org() and omni() methods now emit deprecation warnings.


0.040005 2014-07-22

- No changes. Re-release to fix PAUSE permission issues.


0.040004 2014-07-22

- The web service client API has been updated for the v2.1 release of the web
  service. In particular, the city_isp_org() and omni() methods on
  GeoIP2::WebService::Client should be considered deprecated. The city()
  method now provides all of the data formerly provided by city_isp_org(), and
  the omni() method has been replaced by the insights method. Note that the
  city_isp_org() and omni() methods may start warning when used in the future.
- Support was added for the GeoIP2 Connection Type, Domain, and ISP databases.


0.040003 2014-05-28

- Explicitly import the B module when we use it. This didn't break on our Perl
  but broke elsewhere. Reported by Wes Young. GitHub PR #3.


0.040002 2014-02-03

- Any webservice response with boolean values in the response caused a type
  error to be thrown.


0.040001 2014-01-14

- Updated the docs to mention the MaxMind::DB::Reader::XS module.

- Renamed the languages constructor parameter to locales for both the Client
  and Reader classes.


0.040000 2013-07-16

- Added the GeoIP2::Database::Reader class. This provides an API for looking
  up data in a GeoIP2 database, as opposed to making a web service call.

- Switched the version number scheme to X.YYYZZZ.

- If an IP address is not found, whether for a web service call or in a
  downloaded database, the code always throws a
  GeoIP2::Error::IPAddressNotFound exception.


0.0302   2013-06-20

- Make the license section of the docs match the LICENSE file in the repo. We
  meant to use "same as Perl 5" everywhere.


0.0301   2013-06-10

- The first official beta release of this API.

